build/parser.output
State 137 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: "program" T_id ";" body "."

    2 body: localist block

    3 localist: %empty
    4         | localist local

    5 local: "var" decl_list
    6      | "label" local_label
    7      | header ";" body ";"
    8      | "forward" header ";"

    9 local_label: T_id id_list ";"

   10 id_list: %empty
   11        | id_list "," T_id

   12 decl_list: decl
   13          | decl_list decl

   14 decl: T_id id_list ":" type ";"

   15 header: "procedure" T_id "(" formal headerformal ")"
   16       | "procedure" T_id "(" ")"
   17       | "function" T_id "(" formal headerformal ")" ":" type
   18       | "function" T_id "(" ")" ":" type

   19 headerformal: %empty
   20             | headerformal ";" formal

   21 formal: "var" T_id id_list ":" type
   22       | T_id id_list ":" type

   23 type: "integer"
   24     | "real"
   25     | "boolean"
   26     | "char"
   27     | "array" "[" T_intconst "]" "of" type
   28     | "array" "of" type
   29     | "^" type

   30 block: "begin" stmt blockstmt "end"

   31 blockstmt: %empty
   32          | blockstmt ";" stmt

   33 stmt: %empty
   34     | l-value ":=" expr
   35     | block
   36     | call
   37     | "if" expr "then" stmt
   38     | "if" expr "then" stmt "else" stmt
   39     | "while" expr "do" stmt
   40     | T_id ":" stmt
   41     | "goto" T_id
   42     | "return"
   43     | "new" "[" expr "]" l-value
   44     | "new" l-value
   45     | "dispose" "[" "]" l-value
   46     | "dispose" l-value

   47 expr: l-value
   48     | r-value

   49 l-value: T_id
   50        | "result"
   51        | T_string
   52        | l-value "[" expr "]"
   53        | "(" l-value ")"
   54        | expr "^"

   55 r-value: T_intconst
   56        | "true"
   57        | "false"
   58        | T_realconst
   59        | T_constchar
   60        | "(" r-value ")"
   61        | "nil"
   62        | "@" expr
   63        | "not" expr
   64        | "+" expr
   65        | "-" expr
   66        | expr "+" expr
   67        | expr "-" expr
   68        | expr "*" expr
   69        | expr "/" expr
   70        | expr "div" expr
   71        | expr "mod" expr
   72        | expr "or" expr
   73        | expr "and" expr
   74        | expr "=" expr
   75        | expr "<>" expr
   76        | expr "<" expr
   77        | expr "<=" expr
   78        | expr ">" expr
   79        | expr ">=" expr
   80        | call_as_expr

   81 call: T_id "(" expr callexpr ")"
   82     | T_id "(" ")"

   83 call_as_expr: T_id "(" expr callexpr ")"
   84             | T_id "(" ")"

   85 callexpr: %empty
   86         | callexpr "," expr


Terminals, with rules where they appear

$end (0) 0
error (256)
"and" (258) 73
"array" (259) 27 28
"begin" (260) 30
"boolean" (261) 25
"char" (262) 26
"dispose" (263) 45 46
"div" (264) 70
"do" (265) 39
"else" (266) 38
"end" (267) 30
"false" (268) 57
"forward" (269) 8
"function" (270) 17 18
"goto" (271) 41
"if" (272) 37 38
"integer" (273) 23
"label" (274) 6
"mod" (275) 71
"new" (276) 43 44
"nil" (277) 61
"not" (278) 63
"of" (279) 27 28
"or" (280) 72
"procedure" (281) 15 16
"program" (282) 1
"real" (283) 24
"result" (284) 50
"return" (285) 42
"then" (286) 37 38
"true" (287) 56
"var" (288) 5 21
"while" (289) 39
":=" (290) 34
":" (291) 14 17 18 21 22 40
";" (292) 1 7 8 9 14 20 32
"." (293) 1
"@" (294) 62
"^" (295) 29 54
"(" (296) 15 16 17 18 53 60 81 82 83 84
")" (297) 15 16 17 18 53 60 81 82 83 84
"[" (298) 27 43 45 52
"]" (299) 27 43 45 52
"," (300) 11 86
"=" (301) 74
"<" (302) 76
">" (303) 78
"<>" (304) 75
">=" (305) 79
"<=" (306) 77
"+" (307) 64 66
"-" (308) 65 67
"*" (309) 68
"/" (310) 69
T_intconst (311) 27 55
T_realconst (312) 58
T_constchar (313) 59
T_string (314) 51
T_id (315) 1 9 11 14 15 16 17 18 21 22 40 41 49 81 82 83 84


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
body (63)
    on left: 2, on right: 1 7
localist (64)
    on left: 3 4, on right: 2 4
local (65)
    on left: 5 6 7 8, on right: 4
local_label (66)
    on left: 9, on right: 6
id_list (67)
    on left: 10 11, on right: 9 11 14 21 22
decl_list (68)
    on left: 12 13, on right: 5 13
decl (69)
    on left: 14, on right: 12 13
header (70)
    on left: 15 16 17 18, on right: 7 8
headerformal (71)
    on left: 19 20, on right: 15 17 20
formal (72)
    on left: 21 22, on right: 15 17 20
type (73)
    on left: 23 24 25 26 27 28 29, on right: 14 17 18 21 22 27 28 29
block (74)
    on left: 30, on right: 2 35
blockstmt (75)
    on left: 31 32, on right: 30 32
stmt (76)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right: 30
    32 37 38 39 40
expr (77)
    on left: 47 48, on right: 34 37 38 39 43 52 54 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 81 83 86
l-value (78)
    on left: 49 50 51 52 53 54, on right: 34 43 44 45 46 47 52 53
r-value (79)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80, on right: 48 60
call (80)
    on left: 81 82, on right: 36
call_as_expr (81)
    on left: 83 84, on right: 80
callexpr (82)
    on left: 85 86, on right: 81 83 86


State 0

    0 $accept: . program $end

    "program"  shift, and go to state 1

    program  go to state 2


State 1

    1 program: "program" . T_id ";" body "."

    T_id  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: "program" T_id . ";" body "."

    ";"  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: "program" T_id ";" . body "."

    $default  reduce using rule 3 (localist)

    body      go to state 6
    localist  go to state 7


State 6

    1 program: "program" T_id ";" body . "."

    "."  shift, and go to state 8


State 7

    2 body: localist . block
    4 localist: localist . local

    "begin"      shift, and go to state 9
    "forward"    shift, and go to state 10
    "function"   shift, and go to state 11
    "label"      shift, and go to state 12
    "procedure"  shift, and go to state 13
    "var"        shift, and go to state 14

    local   go to state 15
    header  go to state 16
    block   go to state 17


State 8

    1 program: "program" T_id ";" body "." .

    $default  reduce using rule 1 (program)


State 9

   30 block: "begin" . stmt blockstmt "end"

    "begin"      shift, and go to state 9
    "dispose"    shift, and go to state 18
    "false"      shift, and go to state 19
    "goto"       shift, and go to state 20
    "if"         shift, and go to state 21
    "new"        shift, and go to state 22
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "return"     shift, and go to state 26
    "true"       shift, and go to state 27
    "while"      shift, and go to state 28
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 37

    $default  reduce using rule 33 (stmt)

    block         go to state 38
    stmt          go to state 39
    expr          go to state 40
    l-value       go to state 41
    r-value       go to state 42
    call          go to state 43
    call_as_expr  go to state 44


State 10

    8 local: "forward" . header ";"

    "function"   shift, and go to state 11
    "procedure"  shift, and go to state 13

    header  go to state 45


State 11

   17 header: "function" . T_id "(" formal headerformal ")" ":" type
   18       | "function" . T_id "(" ")" ":" type

    T_id  shift, and go to state 46


State 12

    6 local: "label" . local_label

    T_id  shift, and go to state 47

    local_label  go to state 48


State 13

   15 header: "procedure" . T_id "(" formal headerformal ")"
   16       | "procedure" . T_id "(" ")"

    T_id  shift, and go to state 49


State 14

    5 local: "var" . decl_list

    T_id  shift, and go to state 50

    decl_list  go to state 51
    decl       go to state 52


State 15

    4 localist: localist local .

    $default  reduce using rule 4 (localist)


State 16

    7 local: header . ";" body ";"

    ";"  shift, and go to state 53


State 17

    2 body: localist block .

    $default  reduce using rule 2 (body)


State 18

   45 stmt: "dispose" . "[" "]" l-value
   46     | "dispose" . l-value

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "["          shift, and go to state 54
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 40
    l-value       go to state 56
    r-value       go to state 42
    call_as_expr  go to state 44


State 19

   57 r-value: "false" .

    $default  reduce using rule 57 (r-value)


State 20

   41 stmt: "goto" . T_id

    T_id  shift, and go to state 57


State 21

   37 stmt: "if" . expr "then" stmt
   38     | "if" . expr "then" stmt "else" stmt

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 58
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 22

   43 stmt: "new" . "[" expr "]" l-value
   44     | "new" . l-value

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "["          shift, and go to state 60
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 40
    l-value       go to state 61
    r-value       go to state 42
    call_as_expr  go to state 44


State 23

   61 r-value: "nil" .

    $default  reduce using rule 61 (r-value)


State 24

   63 r-value: "not" . expr

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 62
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 25

   50 l-value: "result" .

    $default  reduce using rule 50 (l-value)


State 26

   42 stmt: "return" .

    $default  reduce using rule 42 (stmt)


State 27

   56 r-value: "true" .

    $default  reduce using rule 56 (r-value)


State 28

   39 stmt: "while" . expr "do" stmt

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 63
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 29

   62 r-value: "@" . expr

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 64
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 30

   53 l-value: "(" . l-value ")"
   60 r-value: "(" . r-value ")"

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 40
    l-value       go to state 65
    r-value       go to state 66
    call_as_expr  go to state 44


State 31

   64 r-value: "+" . expr

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 67
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 32

   65 r-value: "-" . expr

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 68
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 33

   55 r-value: T_intconst .

    $default  reduce using rule 55 (r-value)


State 34

   58 r-value: T_realconst .

    $default  reduce using rule 58 (r-value)


State 35

   59 r-value: T_constchar .

    $default  reduce using rule 59 (r-value)


State 36

   51 l-value: T_string .

    $default  reduce using rule 51 (l-value)


State 37

   40 stmt: T_id . ":" stmt
   49 l-value: T_id .
   81 call: T_id . "(" expr callexpr ")"
   82     | T_id . "(" ")"
   83 call_as_expr: T_id . "(" expr callexpr ")"
   84             | T_id . "(" ")"

    ":"  shift, and go to state 69
    "("  shift, and go to state 70

    $default  reduce using rule 49 (l-value)


State 38

   35 stmt: block .

    $default  reduce using rule 35 (stmt)


State 39

   30 block: "begin" stmt . blockstmt "end"

    $default  reduce using rule 31 (blockstmt)

    blockstmt  go to state 71


State 40

   54 l-value: expr . "^"
   66 r-value: expr . "+" expr
   67        | expr . "-" expr
   68        | expr . "*" expr
   69        | expr . "/" expr
   70        | expr . "div" expr
   71        | expr . "mod" expr
   72        | expr . "or" expr
   73        | expr . "and" expr
   74        | expr . "=" expr
   75        | expr . "<>" expr
   76        | expr . "<" expr
   77        | expr . "<=" expr
   78        | expr . ">" expr
   79        | expr . ">=" expr

    "and"  shift, and go to state 72
    "div"  shift, and go to state 73
    "mod"  shift, and go to state 74
    "or"   shift, and go to state 75
    "^"    shift, and go to state 76
    "="    shift, and go to state 77
    "<"    shift, and go to state 78
    ">"    shift, and go to state 79
    "<>"   shift, and go to state 80
    ">="   shift, and go to state 81
    "<="   shift, and go to state 82
    "+"    shift, and go to state 83
    "-"    shift, and go to state 84
    "*"    shift, and go to state 85
    "/"    shift, and go to state 86


State 41

   34 stmt: l-value . ":=" expr
   47 expr: l-value .
   52 l-value: l-value . "[" expr "]"

    ":="  shift, and go to state 87
    "["   shift, and go to state 88

    $default  reduce using rule 47 (expr)


State 42

   48 expr: r-value .

    $default  reduce using rule 48 (expr)


State 43

   36 stmt: call .

    $default  reduce using rule 36 (stmt)


State 44

   80 r-value: call_as_expr .

    $default  reduce using rule 80 (r-value)


State 45

    8 local: "forward" header . ";"

    ";"  shift, and go to state 89


State 46

   17 header: "function" T_id . "(" formal headerformal ")" ":" type
   18       | "function" T_id . "(" ")" ":" type

    "("  shift, and go to state 90


State 47

    9 local_label: T_id . id_list ";"

    $default  reduce using rule 10 (id_list)

    id_list  go to state 91


State 48

    6 local: "label" local_label .

    $default  reduce using rule 6 (local)


State 49

   15 header: "procedure" T_id . "(" formal headerformal ")"
   16       | "procedure" T_id . "(" ")"

    "("  shift, and go to state 92


State 50

   14 decl: T_id . id_list ":" type ";"

    $default  reduce using rule 10 (id_list)

    id_list  go to state 93


State 51

    5 local: "var" decl_list .
   13 decl_list: decl_list . decl

    T_id  shift, and go to state 50

    $default  reduce using rule 5 (local)

    decl  go to state 94


State 52

   12 decl_list: decl .

    $default  reduce using rule 12 (decl_list)


State 53

    7 local: header ";" . body ";"

    $default  reduce using rule 3 (localist)

    body      go to state 95
    localist  go to state 7


State 54

   45 stmt: "dispose" "[" . "]" l-value

    "]"  shift, and go to state 96


State 55

   49 l-value: T_id .
   83 call_as_expr: T_id . "(" expr callexpr ")"
   84             | T_id . "(" ")"

    "("  shift, and go to state 97

    $default  reduce using rule 49 (l-value)


State 56

   46 stmt: "dispose" l-value .
   47 expr: l-value .
   52 l-value: l-value . "[" expr "]"

    "["  shift, and go to state 88

    "else"    reduce using rule 46 (stmt)
    "end"     reduce using rule 46 (stmt)
    ";"       reduce using rule 46 (stmt)
    $default  reduce using rule 47 (expr)


State 57

   41 stmt: "goto" T_id .

    $default  reduce using rule 41 (stmt)


State 58

   37 stmt: "if" expr . "then" stmt
   38     | "if" expr . "then" stmt "else" stmt
   54 l-value: expr . "^"
   66 r-value: expr . "+" expr
   67        | expr . "-" expr
   68        | expr . "*" expr
   69        | expr . "/" expr
   70        | expr . "div" expr
   71        | expr . "mod" expr
   72        | expr . "or" expr
   73        | expr . "and" expr
   74        | expr . "=" expr
   75        | expr . "<>" expr
   76        | expr . "<" expr
   77        | expr . "<=" expr
   78        | expr . ">" expr
   79        | expr . ">=" expr

    "and"   shift, and go to state 72
    "div"   shift, and go to state 73
    "mod"   shift, and go to state 74
    "or"    shift, and go to state 75
    "then"  shift, and go to state 98
    "^"     shift, and go to state 76
    "="     shift, and go to state 77
    "<"     shift, and go to state 78
    ">"     shift, and go to state 79
    "<>"    shift, and go to state 80
    ">="    shift, and go to state 81
    "<="    shift, and go to state 82
    "+"     shift, and go to state 83
    "-"     shift, and go to state 84
    "*"     shift, and go to state 85
    "/"     shift, and go to state 86


State 59

   47 expr: l-value .
   52 l-value: l-value . "[" expr "]"

    "["  shift, and go to state 88

    $default  reduce using rule 47 (expr)


State 60

   43 stmt: "new" "[" . expr "]" l-value

    "false"      shift, and go to state 19
    "nil"        shift, and go to state 23
    "not"        shift, and go to state 24
    "result"     shift, and go to state 25
    "true"       shift, and go to state 27
    "@"          shift, and go to state 29
    "("          shift, and go to state 30
    "+"          shift, and go to state 31
    "-"          shift, and go to state 32
    T_intconst   shift, and go to state 33
    T_realconst  shift, and go to state 34
    T_constchar  shift, and go to state 35
    T_string     shift, and go to state 36
    T_id         shift, and go to state 55

    expr          go to state 99
    l-value       go to state 59
    r-value       go to state 42
    call_as_expr  go to state 44


State 61

   44 stmt: "new" l-value .
   47 expr: l-value .
   52 l-value: l-value . "[" expr "]"

    "["  shift, and go to state 88

    "else"    reduce using rule 44 (stmt)
    "end"     reduce using rule 44 (stmt)
    ";"       reduce using rule 44 (stmt)
    $default  reduce using rule 47 (expr)


State 62

   54 l-value: expr . "^"
   63 r-value: "not" expr .
   66        | expr . "+" expr
   67        | expr . "-" expr
   68        | expr . "*" expr
   69        | expr . "/" expr
   70        | expr . "div" expr
   71        | expr . "mod" expr
   72        | expr . "or" expr
   73        | expr . "and" expr
   74        | expr . "=" expr
   75        | expr . "<>" expr
   76        | expr . "<" expr
   77        | expr . "<=" expr
   78        | expr . ">" expr
   79        | expr . ">=" expr

    "^"  shift, and go to state 76

    $default  reduce using rule 63 (r-value)


State 63

   39 stmt: "while" expr . "do" stmt
   54 l-value: expr . "^"
   66 r-value: expr . "+" expr
   67        | expr . "-" expr
   68        | expr . "*" expr
   69        | expr . "/" expr
   70        | expr . "div" expr
   71        | expr . "mod" expr
   72        | expr . "or" expr
   73        | expr . "and" expr
   74        | expr . "=" expr
   75        | expr . "<>" expr
   76        | expr . "<" expr
   77        | expr . "<=" expr
   78        | expr . ">" expr
   79        | expr . ">=" expr

    "and"  shift, and go to state 72
    "div"  shift, and go to state 73
    "do"   shift, and go to state 100
    "mod"  shift, and go to state 74
    "or"   shift, and go to state 75
    "^"    shift, and go to state 76
    "="    shift, and go to state 77
    "<"    shift, and go to state 78
    ">"    shift, and go to state 79
    "<>"   shift, and go to state 80
    ">="   shift, and go to state 81
    "<="   shift, and go to state 82
    "+"    shift, and go to state 83
    "-"    shift, and go to state 84
    "*"    shift, and go to state 85
    "/"    shift, and go to state 86


State 64

   54 l-value: expr . "^"
   62 r-value: "@" expr .
   66        | expr . "+" expr
   67        | expr . "-" expr
   68        | expr . "*" expr
   69        | expr . "/" expr
   70        | expr . "div" expr
   71        | expr . "mod" expr
   72        | expr . "or" expr
   73        | expr . "and" expr
   74        | expr . "=" expr
   75        | expr . "<>" expr
   76        | expr . "<" expr
   77        | expr . "<=" expr
   78        | expr . ">" expr
   79        | expr . ">=" expr

    "^"  shift, and go to state 76
